Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignBooleanBoolObjField.quorum
class Main
    Boolean v
    action Main
        v:SetValue(true)
        Test(v)
    end

    action Test(boolean var)
    end
end
